--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:push": "prisma db push",
-    "db:seed": "prisma db seed",
+    "db:seed": "node prisma/seed.js",
     "check": "npm run lint && npm run typecheck"
   },
   "dependencies": {
