--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "check": "npm run lint && npm run typecheck"
   },
   "dependencies": {
+    "@upstash/redis": "^1.31.6",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "bcryptjs": "^3.0.3",
