--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,13 +4,18 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#f6f7fb",
-  "theme_color": "#0f9d58",
-  "description": "WhatsApp-smooth ERP for Kenyan SMEs.",
+  "theme_color": "#ff7d5c",
+  "description": "EasyBiz ERP for Kenyan SMEs.",
   "icons": [
     {
-      "src": "/favicon.ico",
-      "sizes": "48x48",
-      "type": "image/x-icon"
+      "src": "/easybiz-icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/easybiz-icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ]
 }
